--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,6 +216,7 @@ body.mobile-nav-active .navmenu .mobile-logo {
   background-color: #00EEFF; /* Puedes cambiar estos colores */
 }
 
+
 /*ICON HAMBURGER MENU*/
 /* Estilo para el bloque de información de contacto */
 .navmenu .contact-info-section {
@@ -266,6 +267,13 @@ body.mobile-nav-active .navmenu .mobile-logo {
 
 
 /* Dispositivos medianos (tablets o pantallas intermedias) */
+
+@media (max-width: 1250px) {
+  .header .logo img {
+    max-height: 70px;
+  }
+}
+
 @media (max-width: 992px) {
   .header .logo img {
     max-height: 70px;
@@ -575,19 +583,185 @@ body.mobile-nav-active .navmenu .mobile-logo {
   }
 }
 
+@media (max-width: 1250px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 820px;
+  }
+}
+
+@media (max-width: 1210px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 800px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 760px;
+  }
+}
+
+@media (max-width: 1110px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 720px;
+  }
+}
+
+@media (max-width: 1070px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 680px;
+  }
+}
+
 @media (max-width: 1024px) {
   .navmenu ul {
-    inset: 60px 20px 20px 200px;
+    inset: 60px 20px 20px 640px;
+  }
+}
+
+@media (max-width: 980px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 600px;
+  }
+}
+
+
+@media (max-width: 930px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 560px;
+  }
+}
+
+@media (max-width: 900px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 520px;
+  }
+}
+
+@media (max-width: 900px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 530px;
+  }
+}
+
+
+@media (max-width: 880px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 500px;
+  }
+}
+
+@media (max-width: 830px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 460px;
+  }
+}
+
+@media (max-width: 800px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 450px;
+  }
+}
+
+@media (max-width: 800px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 400px;
   }
 }
 
 @media (max-width: 768px) {
   .navmenu ul {
-    inset: 60px 20px 20px 150px;
+    inset: 60px 20px 20px 350px;
+  }
+}
+
+@media (max-width: 730px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 300px;
+  }
+}
+
+@media (max-width: 700px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 270px;
+  }
+}
+
+@media (max-width: 680px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 250px;
+  }
+}
+
+@media (max-width: 630px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 230px;
+  }
+}
+
+@media (max-width: 600px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 190px;
+  }
+}
+
+@media (max-width: 580px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 170px;
+  }
+}
+
+@media (max-width: 530px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 160px;
+  }
+}
+
+@media (max-width: 500px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 140px;
+  }
+}
+
+@media (max-width: 480px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 135px;
+  }
+}
+
+@media (max-width: 450px) {
+  .navmenu ul {
+    inset: 60px 20px 20px 135px;
   }
 }
 
 @media (max-width: 420px) {
+  .navmenu .contact-info-section .contact-item i {
+    font-size: 1.1rem
+  }
+  .navmenu a, .navmenu a:focus {
+    font-size: 14px;
+  }
+  .navmenu ul {
+    inset: 60px 20px 20px 80px;
+  }
+  .header .btn-getstarted, .header .btn-getstarted:focus {
+    color: black;
+    display: inline-block;
+    margin: 10px auto;
+    margin-left: 20px;
+    padding: 10px 25px;
+    width: auto; /* Quita el ancho completo */
+    max-width: 80%; /* Limita su tamaño en pantallas pequeñas si quieres */
+    text-align: center;
+    border-radius: 50px; /* Mantiene la forma redondeada */
+  }
+}
+
+@media (max-width: 374px) {
+  .navmenu a, .navmenu a:focus {
+    font-size: 14px;
+  }
   .navmenu ul {
     inset: 60px 20px 20px 80px;
   }
