--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2843,13 +2843,27 @@ section,
   color: var(--accent-color);
 }
 
-/* Tabs horizontales móviles */
-#mobile-tabs {
-  scrollbar-width: thin;
-  scrollbar-color: #00EEFF #323946;
-  padding-bottom: 5px;
+/* Wrapper para sticky */
+.tabs-mobile-sticky {
+  position: sticky;
+  top: 100px; /* Ajusta si tienes un navbar fijo arriba */
+  z-index: 10;
+  background-color: #1f242d; /* Fondo igual al de tu sección o body */
 }
 
+/* Tabs horizontales móviles */
+#mobile-tabs {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  gap: 10px;
+  padding-bottom: 5px;
+
+  scrollbar-width: thin;
+  scrollbar-color: #00EEFF #323946;
+}
+
+/* Scrollbar WebKit */
 #mobile-tabs::-webkit-scrollbar {
   height: 6px;
 }
@@ -2857,6 +2871,40 @@ section,
 #mobile-tabs::-webkit-scrollbar-thumb {
   background-color: #00EEFF;
   border-radius: 10px;
+}
+
+/* Estilos de los tabs */
+.nav-pills .nav-link {
+  background-color: #323946;
+  color: #00EEFF;
+  padding: 10px 20px;
+  border-radius: 10px;
+  flex: 0 0 auto;
+}
+
+.nav-pills .nav-link.active {
+  background-color: #00EEFF;
+  color: #000000;
+}
+
+.nav-pills .nav-link:hover {
+  background-color: #00EEFF;
+  color: #000000;
+}
+
+.nav-pills .nav-link i {
+  margin-right: 5px;
+}
+
+.nav-pills .nav-link h4 {
+  font-size: 14px;
+  font-weight: 500;
+  margin: 0;
+}
+
+.nav-pills .nav-link.active h4,
+.nav-pills .nav-link:hover h4 {
+  color: #ffffff;
 }
 
 /* Cards services */
@@ -2868,19 +2916,20 @@ section,
 
 /* Ajustar la distancia entre el icono y el título */
 .card-title {
-  margin-top: 15px; /* Añadir más espacio entre el icono y el título */
+  margin-top: 15px;
 }
 
 /* Animación de zoom suave */
 .card {
-  transition: transform 0.3s ease-in-out; /* Transición suave en ambos estados */
-  background-color: #323946; /* Nuevo color de fondo */
-  color: #ffffff; /* Asegura que el texto sea legible */
+  transition: transform 0.3s ease-in-out;
+  background-color: #323946;
+  color: #ffffff;
 }
 
 .card:hover {
-  transform: scale(1.05); /* Aumenta el tamaño de la tarjeta */
+  transform: scale(1.05);
 }
+
 
 
 /*--------------------------------------------------------------
