--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3022,16 +3022,54 @@ section,
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  flex-wrap: wrap;
+  gap: 15px;
+  text-align: center;
+  margin-bottom: 3%;
+}
+
+.image-wrapp {
+  flex: 1 1 150px;
+  max-width: 200px;
+}
+
+.wrapp {
+  width: 100%;
+  height: auto;
+  max-width: 180px; /* mismo tamaño para imágenes laterales */
+  border-radius: 0.75rem;
+}
+
+.img-arrow {
+  width: 50px; /* flecha más pequeña */
+  transition: transform 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .img-arrow {
+    transform: rotate(90deg); /* Flecha apuntando hacia abajo */
+  }
+
+  .get-coti-container {
+    margin-bottom: 7%;
+  }
 }
 
 .rounded-dev {
   border-radius:  var(--bs-border-radius-xl) !important;
   border: 8px solid var(--surface-color);
   margin-bottom: 5%;
+  justify-content: center !important;
 }
 
 .rounded-dev-2 {
   margin-bottom: 5%;
   justify-content: center;
+}
+
+.rounded-dev-3 {
+  
+  width: 100%;
+  height: auto;
+  border-radius: 0.75rem;
 }
