--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3028,6 +3028,24 @@ section,
   margin-bottom: 3%;
 }
 
+.seo-en-contenidos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 5%;
+  width: 100%;
+}
+
+.seo-local{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 5%;
+  width: 100%;
+}
+
 .image-wrapp {
   flex: 1 1 150px;
   max-width: 200px;
@@ -3036,7 +3054,7 @@ section,
 .wrapp {
   width: 100%;
   height: auto;
-  max-width: 180px; /* mismo tamaño para imágenes laterales */
+  max-width: 200px; /* mismo tamaño para imágenes laterales */
   border-radius: 0.75rem;
 }
 
@@ -3072,4 +3090,11 @@ section,
   width: 100%;
   height: auto;
   border-radius: 0.75rem;
+}
+
+.citas {
+  border-radius:  var(--bs-border-radius-xl) !important;
+  border: 8px solid var(--surface-color);
+  margin-bottom: 5%;
+  justify-content: center !important;
 }
